--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>WidgetShop</title>
+  <title>DS Beadery</title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
@@ -10,16 +10,11 @@
 
 <%=render 'partials/home/header' %>
 
-<% if has_order? %>
-<p style="border:1px solid black;padding:10px;">
-  You have <%= pluralize current_order.total_items, 'item'%> in your basket which cost
-  <%= number_to_currency current_order.total_before_tax %>.
-  <%= link_to "View basket", basket_path %>
-  <%= link_to "Checkout", checkout_path %>
-</p>
-<% end %>
-
-<%= yield %>
+<div id="main-container" class="container" style="max-width:1024px; padding: 5px 0;">
+	<div class="row">
+  	<%= yield %>
+  </div>
+</div>
 
 <%=render 'partials/home/footer' %>
 </body>
